trying to make background to 3d model align correctly

--- a/docs/style.css
+++ b/docs/style.css
@@ -45,7 +45,7 @@ padding-left: 3em;
 
 
 div.threeD{
-    width:80%;
+    width:50%;
     background:lightpink;
 }
 div.threeD iframe{
